blurring effect solve

--- a/love/main.css
+++ b/love/main.css
@@ -53,7 +53,7 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 3px 3px 8px rgba(255, 255, 255, 0.5);
+    text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.4);
     margin: 0;
   }
     
